<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.simplepass.cadevan.activity.RecoverPasswordActivity"
    tools:showIn="@layout/activity_recover_password">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover_password_message"
        android:layout_marginBottom="6dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:text="+55"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            style="@style/edit_text_form"/>

        <EditText
            android:id="@+id/phone_recover_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            style="@style/edit_text_form">
                <requestFocus/>
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btn_send_recover_password"
        style="@style/button_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/send"
        android:textStyle="bold" />


</LinearLayout>
